[FIX] website: hide horizontal scrollbar in hamburger menu
Before this commit, when a vertical scrollbar appeared in the collapse
navbar menu, the horizontal scrollbar also appeared.

We added overflow-x hidden on navbar and navbar-collapse for never
again display this horizontal scrollbar.

task-2312878

closes odoo/odoo#60187

X-original-commit: 8a889277d8fa0af8498964e264c781424f79e3d8

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -822,12 +822,14 @@ header {
         .navbar .dropdown-menu {
             max-height: 60vh;
             overflow-y: auto;
+            overflow-x: hidden; // Needed because of container in container having 0px padding... TODO improve
         }
     }
     // ... but we limit the navbar-collapse height
     .navbar-collapse.show {
         max-height: 80vh;
         overflow-y: auto;
+        overflow-x: hidden; // Needed because of container in container having 0px padding... TODO improve
     }
 
     &:not(.o_header_is_scrolled) {
